获取范围内的汇率列表
